<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:rowCount="3"
    android:columnCount="2"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/name"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagString"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descuentostring"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/textPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid" />
    <TextView
        android:id="@+id/textViewDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount" />



</GridLayout>